캘린더 랜더링시 일부 날짜의 일차가 나오지 않는 문제

--- a/src/main/resources/templates/design/map/plan_detail.html
+++ b/src/main/resources/templates/design/map/plan_detail.html
@@ -166,7 +166,7 @@
             }
         }
 
-
+//캘린더 랜더링시 일부 날짜의 일차가 나오지 않는 문제
             document.addEventListener('DOMContentLoaded', function () {
                 console.log('addEventListener');
                 spotsPrint();
