--- a/src/main/resources/templates/spot/spotDetail.html
+++ b/src/main/resources/templates/spot/spotDetail.html
@@ -54,9 +54,19 @@
                 <div class="card card-small blog-comments" style="height: 400px;">
                     <div class="card-header border-bottom">
                         <h6 class="m-0">Spot Review</h6>
-                        <a th:href="@{/review/create}" class="btn btn-outline-primary">리뷰 작성</a>
+                        <a th:href="@{/review/create/${spotDto.id}}" class="btn btn-outline-primary">리뷰 작성</a>
+                        <a th:href="@{/review/create}" class="btn btn-outline-primary">리뷰 작성2</a>
+
+                        <form action="/review/create" method="gett">
+                            <input type="hidden" name="spotId" th:value="${spotDto.id}">
+                            <button type="submit" formaction="/review/create" class="mt-2 mb-2 btn btn-sm btn-pill btn-outline-primary mx-auto" style="width: 70px;">
+                                리뷰 작성
+                            </button>
+                        </form>
+
                     </div>
                     <div class="card-body p-0" style="overflow:scroll;">
+
                         <div th:each="review : ${spotDto.reviews}" class="blog-comments__item d-flex p-3">
                             <div class="blog-comments__content">
                                 <div class="blog-comments__meta text-muted">
