View More Reviews 버튼 전체 리스트와 연결(여행지별 조회 필요)

--- a/src/main/resources/templates/spot/spotDetail.html
+++ b/src/main/resources/templates/spot/spotDetail.html
@@ -112,7 +112,9 @@
                     <div class="card-footer border-top">
                         <div class="row">
                             <div class="col text-center view-report">
+                                <a th:href="@{|/review/list|}">
                                 <button type="submit" class="btn btn-white">View More Reviews</button>
+                                </a>
                             </div>
                         </div>
                     </div>
