--- a/src/main/resources/templates/design/map/plan_detail.html
+++ b/src/main/resources/templates/design/map/plan_detail.html
@@ -118,11 +118,12 @@
                     </div>
                 </div>
             </div>
-            <!--지도-->
-            <div class="card card container mt-2" style="width:100%; min-height:100%;">
+            <div class="card card container">
+                <!--지도-->
                 <div id="mapTotal" style="width:100%;height:350px;"></div>
 
-                <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3398f87064ef2d4f364684990589c167"></script>
+                <script type="text/javascript"
+                        src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3398f87064ef2d4f364684990589c167"></script>
                 <script>
                     var MARKER_WIDTH = 33, // 기본, 클릭 마커의 너비
                         MARKER_HEIGHT = 36, // 기본, 클릭 마커의 높이
@@ -143,42 +144,13 @@
                         overMarkerOffset = new kakao.maps.Point(OVER_OFFSET_X, OVER_OFFSET_Y), // 오버 마커의 기준 좌표
                         spriteImageSize = new kakao.maps.Size(SPRITE_WIDTH, SPRITE_HEIGHT); // 스프라이트 이미지의 크기
 
-                    var positionsAddress = [
-                        {
-                            title: '카카오',
-                            address: '경기 성남시 분당구 판교역로 166 카카오 판교아지트 A동 3층'
-                        },
-                        {
-                            title: '생태연못',
-                            address: '경기 남양주시 조안면 능내리 50'
-                        },
-                        {
-                            title: '근린공원',
-                            address: '경기 남양주시 별내면 청학로68번길 40'
-                        }
-                    ];
-                    //변환된 여행지 주소 배열
+                    var addresss = [];
                     var positions = [  // 마커의 위치
-                            // new kakao.maps.LatLng(33.44975, 126.56967),
-                            // new kakao.maps.LatLng(33.450579, 126.56956),
-                            // new kakao.maps.LatLng(33.4506468, 126.5707)
-                            {
-                                title: '카카오',
-                                latlng: new kakao.maps.LatLng(33.450705, 126.570677)
-                            },
-                            {
-                                title: '생태연못',
-                                latlng: new kakao.maps.LatLng(33.450936, 126.569477)
-                            },
-                            {
-                                title: '근린공원',
-                                latlng: new kakao.maps.LatLng(33.451393, 126.570738)
-                            }
+                            new kakao.maps.LatLng(33.44975, 126.56967),
+                            new kakao.maps.LatLng(33.450579, 126.56956),
+                            new kakao.maps.LatLng(33.4506468, 126.5707)
                         ],
                         selectedMarker = null; // 클릭한 마커를 담을 변수
-
-                    //주소-좌표 변환 객체
-                    var geocoder = new kakao.maps.services.Geocoder();
 
                     var mapContainer = document.getElementById('mapTotal'), // 지도를 표시할 div
                         mapOption = {
@@ -220,7 +192,7 @@
                         marker.normalImage = normalImage;
 
                         // 마커에 mouseover 이벤트를 등록합니다
-                        kakao.maps.event.addListener(marker, 'mouseover', function() {
+                        kakao.maps.event.addListener(marker, 'mouseover', function () {
 
                             // 클릭된 마커가 없고, mouseover된 마커가 클릭된 마커가 아니면
                             // 마커의 이미지를 오버 이미지로 변경합니다
@@ -230,7 +202,7 @@
                         });
 
                         // 마커에 mouseout 이벤트를 등록합니다
-                        kakao.maps.event.addListener(marker, 'mouseout', function() {
+                        kakao.maps.event.addListener(marker, 'mouseout', function () {
 
                             // 클릭된 마커가 없고, mouseout된 마커가 클릭된 마커가 아니면
                             // 마커의 이미지를 기본 이미지로 변경합니다
@@ -240,7 +212,7 @@
                         });
 
                         // 마커에 click 이벤트를 등록합니다
-                        kakao.maps.event.addListener(marker, 'click', function() {
+                        kakao.maps.event.addListener(marker, 'click', function () {
 
                             // 클릭된 마커가 없고, click 마커가 클릭된 마커가 아니면
                             // 마커의 이미지를 클릭 이미지로 변경합니다
