--- a/src/main/resources/templates/design/map/plan_detail.html
+++ b/src/main/resources/templates/design/map/plan_detail.html
@@ -128,6 +128,7 @@
                 <script type="text/javascript"
                         src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3398f87064ef2d4f364684990589c167&libraries=services"></script>
                 <script th:inline="javascript">
+                    // window.onload = setBounds();
                     // var plan_id = $('input[name=plan_id]').val();
                     // var plan_size = $('input[name=plan_size]').val();
                     // var spots = [[${spotList}]];
@@ -145,12 +146,8 @@
 
                     // 지도를 재설정할 범위정보를 가지고 있을 LatLngBounds 객체를 생성합니다
                     var bounds = new kakao.maps.LatLngBounds();
-                    // for(let i = 0; i < spots.length; i++) {
-                    //     positions.push({
-                    //         title: spots.name,
-                    //         addressMap: spots.address
-                    //     });
-                    // }
+
+
 
                     var positions = [
                         // {
@@ -196,11 +193,18 @@
 
                                 var coords = new kakao.maps.LatLng(result[0].y, result[0].x);
 
+
                                 // 결과값으로 받은 위치를 마커로 표시합니다
                                 var marker = new kakao.maps.Marker({
                                     map: map,
                                     position: coords
                                 });
+                                marker.setMap(map);
+
+
+                                // LatLngBounds 객체에 좌표를 추가합니다
+                                bounds.extend(coords);
+
 
                                 // 인포윈도우로 장소에 대한 설명을 표시합니다
                                 var infowindow = new kakao.maps.InfoWindow({
@@ -209,10 +213,16 @@
                                 infowindow.open(map, marker);
 
                                 // 지도의 중심을 결과값으로 받은 위치로 이동시킵니다
-                                map.setCenter(coords);
+                                // map.setCenter(coords);
+                                setBounds()
                             }
                         });
                     });
+                    function setBounds() {
+                        // LatLngBounds 객체에 추가된 좌표들을 기준으로 지도의 범위를 재설정합니다
+                        // 이때 지도의 중심좌표와 레벨이 변경될 수 있습니다
+                        map.setBounds(bounds);
+                    }
                 </script>
                 <!--지도 끝-->
             </div>
