map.js에서 window.onload 해당 함수는 따로 분리

--- a/src/main/resources/templates/design/map/modify_plan.html
+++ b/src/main/resources/templates/design/map/modify_plan.html
@@ -1,6 +1,14 @@
 <html layout:decorate="~{layout/layout}">
 <div layout:fragment="content" class=" d-flex justify-content-around mt-3"
      style="width:95%; height:100%; position:absolute;">
+    <script>
+        window.onload = function () {
+            console.log('getAllBusket');
+            // getAllBusket(plan_id);
+            getAllCourse(course_id);
+        }
+    </script>
+
     <style>
         .busket::-webkit-scrollbar {
             display: none;
