--- a/src/main/resources/templates/spot/spotDetail.html
+++ b/src/main/resources/templates/spot/spotDetail.html
@@ -110,7 +110,7 @@
                     <div class="card-footer border-top">
                         <div class="row">
                             <div class="col text-center view-report">
-                                <a th:href="@{|/review/list|}">
+                                <a th:href="@{|/review/spotReviewList/${spotDto.id}|}">
                                 <button type="submit" class="btn btn-white">View More Reviews</button>
                                 </a>
                             </div>
