--- a/src/main/resources/templates/review/myReviewList.html
+++ b/src/main/resources/templates/review/myReviewList.html
@@ -4,7 +4,11 @@
         layout:decorate="~{layout/layout}">
 
 <div layout:fragment="content" class="container my-3">
-
+    <div class="my-3 border-bottom">
+        <div>
+            <h4>내 여행 리뷰</h4>
+        </div>
+    </div>
     <table class="table">
         <thead class="table-dark">
         <tr>
