--- a/src/main/resources/templates/review/readReview.html
+++ b/src/main/resources/templates/review/readReview.html
@@ -16,6 +16,8 @@
                             <h4 th:text="${review.title}"></h4>
                         </div>
                         <div class="d-flex justify-content-end">
+                            <span th:text="${review.siteUser?.username}"></span></div>
+                        <div class="d-flex justify-content-end">
                             <div th:text="${#temporals.format(review.firstCreatedDate, '작성일 yyyy-MM-dd HH:mm')}"></div>
                             <div th:text="${#temporals.format(review.lastModifiedDate, '수정일 yyyy-MM-dd HH:mm')}"></div>
                         </div>
@@ -23,7 +25,7 @@
 
                     <!-- 검색 태그 결과 -->
 
-
+                    <h4 th:text="${review.getTagList(review)}"></h4>
 
                     <div class="row">
                         <div class="col">
