--- a/src/main/resources/templates/review/readReview.html
+++ b/src/main/resources/templates/review/readReview.html
@@ -19,25 +19,26 @@
                             <span th:text="${review.siteUser?.username}"></span></div>
                         <div class="d-flex justify-content-end">
                             <div th:text="${#temporals.format(review.firstCreatedDate, '작성일 yyyy-MM-dd HH:mm')}"></div>
+                        </div>
+                        <div class="d-flex justify-content-end">
                             <div th:text="${#temporals.format(review.lastModifiedDate, '수정일 yyyy-MM-dd HH:mm')}"></div>
                         </div>
                     </div>
 
                     <!-- 검색 태그 결과 -->
 
-                    <h4 th:text="${review.getTagList(review)}"></h4>
+                    <div th:text="${review.getTagList(review)}"></div>
 
-                    <div class="row">
+                    <!--<div class="row" th:each="tag:${review.reviewTags}">-->
                         <div class="col">
                             <button id="혼자" class="mb-2 btn btn-sm btn-outline-primary mr-1"
                                     onclick="location.href='링크주소';">혼자
                             </button>
-                            <button id="연인끼리" class="mb-2 btn btn-sm btn-outline-secondary mr-1">연인끼리</button>
+                            <button id="연인끼리" th:text="${review.getTagList(review)}" class="mb-2 btn btn-sm btn-outline-secondary mr-1" ></button>
                             <button id="가족끼리" class="mb-2 btn btn-sm btn-outline-success mr-1">가족끼리</button>
                             <button id="친구끼리" class="mb-2 btn btn-sm btn-outline-danger mr-1">친구끼리</button>
 
                         </div>
-                    </div>
                     <div class="row">
                         <div class="col">
                             <button id="봄" class="mb-2 btn btn-sm btn-outline-primary mr-1">봄</button>
