--- a/src/main/resources/templates/layout/fragments/sidebar.html
+++ b/src/main/resources/templates/layout/fragments/sidebar.html
@@ -5,7 +5,7 @@
         <aside class="main-sidebar col-12 col-md-3 col-lg-2 px-0">
             <div class="main-navbar">
                 <nav class="navbar align-items-stretch navbar-light bg-white flex-md-nowrap border-bottom p-0">
-                    <a class="navbar-brand w-100 mr-0" href="#" style="line-height: 25px;">
+                    <a class="navbar-brand w-100 mr-0" href="/spot/show" style="line-height: 25px;">
                         <div class="d-table m-auto">
                             <img id="main-logo" class="d-inline-block align-top mr-1" style="max-width: 25px;" th:src="@{/images/shards-dashboards-logo.svg}" alt="Shards Dashboard">
                             <span class="d-none d-md-inline ml-1">DAMDA</span>
