--- a/src/main/resources/templates/spot/spotList.html
+++ b/src/main/resources/templates/spot/spotList.html
@@ -13,7 +13,7 @@
             </div>
         </div>
         <!-- 검색 태그 조건 -->
-        <div class="form-row mx-5">
+        <div class="form-row">
             <span th:if="${param.checkedValue}"></span>
             <fieldset class="col">
                 <strong class="text-muted d-block mb-2">검색 태그 조건</strong>
